--- a/package.json
+++ b/package.json
@@ -1,55 +1,35 @@
 {
-  "_from": "homebridge-soma-smartshades",
-  "_id": "homebridge-soma-smartshades@0.0.1",
-  "_inBundle": false,
-  "_integrity": "sha512-3DZGUvz9wlg+peuXdtYGw13tpWM7h6CzJzYlFiH/G6K4c6TtiJs3am2XemrdwVkX1Ylma5bojqSpxV4PUye/BQ==",
-  "_location": "/homebridge-soma-smartshades",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "tag",
-    "registry": true,
-    "raw": "homebridge-soma-smartshades",
-    "name": "homebridge-soma-smartshades",
-    "escapedName": "homebridge-soma-smartshades",
-    "rawSpec": "",
-    "saveSpec": null,
-    "fetchSpec": "latest"
-  },
-  "_requiredBy": [
-    "#USER"
-  ],
-  "_resolved": "https://registry.npmjs.org/homebridge-soma-smartshades/-/homebridge-soma-smartshades-0.0.1.tgz",
-  "_shasum": "827f9cc3bee9ee821557f6a7677c5912750e14cf",
-  "_spec": "homebridge-soma-smartshades",
-  "_where": "/home/pi",
-  "author": {
-    "name": "Thomas Nemec"
-  },
-  "bugs": {
-    "url": "http://github.com/thncode/homebridge-soma-smartshades/issues"
-  },
-  "bundleDependencies": false,
-  "dependencies": {
-    "fakegato-history": "^0.4.0",
-    "request": "^2.65.0"
-  },
-  "deprecated": false,
-  "description": "a homebridge(https://github.com/nfarina/homebridge) plugin that get RaspberryPi information.",
+  "name": "homebridge-window-cover",
+  "version": "1.0.1",
+  "description": "Homebridge Soma Smartshades Plugin",
+  "main": "index.js",
   "engines": {
-    "homebridge": ">=0.4.1",
-    "node": ">=0.12.0"
+    "homebridge": ">=0.3.2"
   },
-  "homepage": "https://github.com/thncode/homebridge-soma-smartshades",
-  "keywords": [
-    "homebridge-plugin",
-    "raspberrypi",
-    "raspberry-pi",
-    "temperature"
-  ],
-  "name": "homebridge-soma-smartshades",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
-    "url": "git://github.com/thncode/homebridge-soma-smartshades.git"
+    "url": "git+https://github.com/thncode/homebridge-some-smartshades.git"
   },
-  "version": "0.0.1"
+  "keywords": [
+    "homebridge",
+    "homebridge-plugin",
+    "blinder",
+    "shutter",
+    "HAP",
+    "window",
+    "cover"
+  ],
+  "author": "Thomas Nemec",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/PJCzx/homebridge-some-smartshades/issues"
+  },
+  "homepage": "https://github.com/PJCzx/homebridge-some-smartshades#readme",
+  "dependencies": {
+    "python-shell": "^0.4.0",
+    "request": "^2.78.0"
+  }
 }
