--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/PJCzx/homebridge-some-smartshades#readme",
   "dependencies": {
     "python-shell": "^0.4.0",
-    "request": "^2.78.0"
+    "request": "^2.78.0",
+    "soma-ctrl": "^1.4.0"
   }
 }
